--- a/WillItLaunch/src/willitlaunch/LoadScreen.fxml
+++ b/WillItLaunch/src/willitlaunch/LoadScreen.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="willitlaunch.LoadScreenController">
+<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="willitlaunch.LoadScreenController">
     <children>
       <VBox prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -20,11 +20,11 @@
                   <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
                </VBox.margin>
             </Label>
-            <Pane prefHeight="256.0" prefWidth="256.0" />
+            <Pane fx:id="logoPane" prefHeight="256.0" prefWidth="256.0" />
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" VBox.vgrow="ALWAYS">
                <children>
-                  <TextField prefWidth="400.0" promptText="Connect to Mission Control" />
-                  <Button mnemonicParsing="false" text="Connect" />
+                  <TextField fx:id="ipBox" prefWidth="400.0" promptText="Connect to Mission Control" />
+                  <Button fx:id="connect" mnemonicParsing="false" onAction="#connectTo" text="Connect" />
                </children>
                <opaqueInsets>
                   <Insets />
