--- a/WillItLaunch/src/willitlaunch/FlightControl.fxml
+++ b/WillItLaunch/src/willitlaunch/FlightControl.fxml
@@ -23,6 +23,7 @@
             </VBox>
             <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="ALWAYS">
                <children>
+                  <Label fx:id="controllerTitle" prefHeight="100.0" prefWidth="3000.0" styleClass="heading" />
                   <GridPane fx:id="gaugesGrid" VBox.vgrow="ALWAYS">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
