Added pretty logo

--- a/WillItLaunch/src/willitlaunch/LoadScreen.fxml
+++ b/WillItLaunch/src/willitlaunch/LoadScreen.fxml
@@ -20,7 +20,7 @@
                   <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
                </VBox.margin>
             </Label>
-            <Pane fx:id="logoPane" prefHeight="256.0" prefWidth="256.0" />
+            <StackPane fx:id="logoPane" prefHeight="150.0" prefWidth="200.0" />
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" VBox.vgrow="ALWAYS">
                <children>
                   <TextField fx:id="ipBox" prefWidth="400.0" promptText="Connect to Mission Control" />
