--- a/WillItLaunch/src/willitlaunch/FlightControl.fxml
+++ b/WillItLaunch/src/willitlaunch/FlightControl.fxml
@@ -37,7 +37,7 @@
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                   </GridPane>
-                  <GridPane fx:id="controlsGrid">
+                  <GridPane fx:id="controlsGrid" minHeight="200.0">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
