--- a/WillItLaunch/src/willitlaunch/FlightControl.fxml
+++ b/WillItLaunch/src/willitlaunch/FlightControl.fxml
@@ -10,13 +10,13 @@
    <children>
       <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <VBox prefHeight="200.0" prefWidth="100.0" HBox.hgrow="NEVER">
+            <VBox minWidth="150.0" prefHeight="200.0" prefWidth="300.0" HBox.hgrow="NEVER">
                <children>
                   <ListView fx:id="checkList" prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS" />
                   <VBox>
                      <children>
-                        <Label fx:id="timeLabel" prefHeight="50.0" prefWidth="3000.0" />
-                        <Button fx:id="goButton" mnemonicParsing="false" prefHeight="50.0" prefWidth="3000.0" text="Go" />
+                        <AnchorPane fx:id="timeLabel" prefHeight="100.0" prefWidth="3000.0" />
+                        <Button fx:id="goButton" mnemonicParsing="false" prefHeight="100.0" prefWidth="3000.0" text="Go" />
                      </children>
                   </VBox>
                </children>
